# py-databot

./: app.py  executor.py  mdstreamer.py  prompt.md  pyproject.toml  requirements.txt
tests/: test_mdstreamer.py
www/: style.css
